# XX3D_Backup

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Editor/: CMakeLists.txt  main.cpp
Editor/Private/: Edhitor.cpp  EdhitorUI.cpp
Editor/Public/: Editor.h  EditorUI.h
Runtime/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt  main.cpp  xxEngineNameStyle.DotSettings
Source/Core/: CMakeLists.txt  CoreMath.cpp  CoreMath.h  logger.h  macro.h  typedefine.h
Source/Core/Container/: Container.h  TArray.h
Source/Core/File/: CoreFile.cpp  CoreFile.h
Source/Core/Json/: CoreJson.h
Source/Core/Math/: CoreMath.cpp  CoreMath.h  Math.h  MathStructs.cpp  MathStructs.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
Source/Core/Memory/: SmartPointer.h
Source/Core/Singleton/: Singleton.h
Source/Core/String/: String.h
Source/Core/Time/: Time.h
Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorContext.cpp  EditorContext.h  main.cpp
Source/Editor/Context/Private/: Editor.cpp
Source/Editor/Context/Public/: Editor.h
Source/Editor/EditorAssets/: AssetTree.h  AssetsMgr.cpp  AssetsMgr.h
Source/Editor/EditorUI/: EditorUI.cpp  EditorUI.h  EditorWindow.cpp  EditorWindow.h
Source/Editor/EditorUI/Private/: AssetView.cpp  AssetView.h  EditorUIMgr.cpp  EditorWindow.cpp  UIController.cpp  Widget.cpp  WndAssetBrowser.cpp  WndAssetBrowser.h  WndDetails.cpp  WndDetails.h  WndLevelHierarchy.cpp  WndLevelHierarchy.h  WndViewport.cpp  WndViewport.h
Source/Editor/EditorUI/Public/: EditorUIMgr.h  EditorWindow.h  UIController.h  Widget.h
Source/Editor/Functions/Private/: AssetManager.cpp  EditorLevel.cpp  EditorLevelMgr.cpp  MeshImporter.cpp  TextureImporter.cpp
Source/Editor/Functions/Public/: AssetManager.h  EditorLevel.h  EditorLevelMgr.h  EditorTimer.h  MeshImporter.h  TextureImporter.h
Source/Editor/Private/: Edhitor.cpp  EdhitorUI.cpp  Editor.cpp  EditorUI.cpp
Source/Editor/Private/MeshUtil/: MeshUtil.cpp  MeshUtil.h
Source/Editor/Public/: Editor.h  EditorUI.h
Source/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineContext.cpp  EngineContext.h  main.cpp
Source/Engine/Asset/Private/: AssetLoader.cpp  LevelAsset.cpp  MaterialAsset.cpp  MeshAsset.cpp  TextureAsset.cpp
Source/Engine/Asset/Public/: AssetCommon.h  AssetLoader.h  LevelAsset.h  MaterialAsset.h  MeshAsset.h  TextureAsset.h
Source/Engine/Camera/: Camera.cpp  Camera.h
Source/Engine/Core/: macro.h
Source/Engine/Core/BaseType/: Structs.h  typedefine.h
Source/Engine/Core/Concurrency/: Concurrency.h
Source/Engine/Core/Container/: Container.h  TArray.h
Source/Engine/Core/File/: CoreFile.cpp  CoreFile.h  CoreJson.h
Source/Engine/Core/Json/: Json.cpp  Json.h
Source/Engine/Core/Math/: Math.h  MathBase.cpp  MathBase.h  MathStructs.cpp  MathStructs.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Vector.cpp  Vector.h
Source/Engine/Core/Memory/: SmartPointer.h
Source/Engine/Core/Private/: File.cpp  Json.cpp  String.cpp  TSingleton.cpp
Source/Engine/Core/Public/: BaseStructs.h  Container.h  File.h  Func.h  Json.h  String.h  TPtr.h  TRefRange.h  TSingleton.h  TVector.h  TempArray.h  Time.h  TypeDefine.h  macro.h
Source/Engine/Core/Singleton/: TSingleton.h
Source/Engine/Core/Time/: Time.h
Source/Engine/FPSRecorder/: FPSRecorder.cpp  FPSRecorder.h
Source/Engine/Light/: DirectionalLight.h
Source/Engine/Math/Private/: AABB.cpp  MathBase.cpp  Matrix.cpp  Quaternion.cpp  Vector.cpp
Source/Engine/Math/Public/: AABB.h  MathBase.h  Quaternion.h  Vector.h
Source/Engine/Mesh/: Mesh.cpp  Mesh.h  MeshUtil.cpp  MeshUtil.h  RenderMesh.cpp  RenderMesh.h  mesh.h
Source/Engine/Model/: model.cpp  model.h
Source/Engine/Objects/Private/: Camera.cpp  Engine.cpp  EngineContext.cpp  Level.cpp  Material.cpp  RenderObject3D.cpp  RenderScene.cpp  Renderer.cpp  StaticMesh.cpp  Texture.cpp  Timer.cpp
Source/Engine/Objects/Public/: Camera.h  Engine.h  EngineContext.h  Level.h  Material.h  RenderObject3D.h  RenderScene.h  Renderer.h  StaticMesh.h  Texture.h  Timer.h
Source/Engine/RHI/: RHI.cpp  RHI.h  RHIClasses.h  RHIStructs.h
Source/Engine/RHI/Private/: RHI.cpp
Source/Engine/RHI/Public/: RHI.h  RHIClasses.h  RHIEnum.h  RHIStructs.h
Source/Engine/RHI/RHIVulkan/: RHIVKResources.cpp  RHIVKResources.h  RHIVulkan.cpp  RHIVulkan.h  VulkanRecorder.h  VulkanUtil.cpp  VulkanUtil.h
Source/Engine/Render/: ImGuiImpl.cpp  ImGuiImpl.h  RenderCommon.cpp  RenderCommon.h  RenderResources.cpp  RenderResources.h  RenderScene.cpp  RenderScene.h  RenderSystem.cpp  RenderSystem.h  UIRenderer.cpp  UIRenderer.h
Source/Engine/Render/Camera/: Camera.h
Source/Engine/Render/Common/: ImGuiImpl.cpp  ImGuiImpl.h  RenderCommon.cpp  RenderCommon.h  RenderMacro.h  RenderResources.cpp  RenderResources.h  RenderSystem.cpp  RenderSystem.h  UIBase.h
Source/Engine/Render/Light/: DirectionalLight.h  Light.h  SpotLight.h
Source/Engine/Render/Material/: Material.cpp  Material.h
Source/Engine/Resource/: ResourcesMacro.h
Source/Engine/Scene/: RenderScene.cpp  RenderScene.h
Source/Engine/Texture/: Texture.cpp  Texture.h
Source/Engine/Window/: InputEnum.h  WindowSystem.h  WindowSystemGLFW.cpp  WindowSystemGLFW.h
Source/RHI/: RHI.cpp  RHI.h  RHIClasses.h  RHIEnum.h  RHIInstance.cpp  RHIInstance.h  RHIResources.h  RHIStructs.h
Source/RHI/RHIVulkan/: RHIVKResources.cpp  RHIVKResources.h  RHIVulkan.cpp  RHIVulkan.h  VulkanFuncs.cpp  VulkanFuncs.h  VulkanRecorder.cpp  VulkanRecorder.h  VulkanUtil.cpp  VulkanUtil.h  VulkanUtil.hpp
Source/Render/: CMakeLists.txt  RenderInterface.cpp  RenderInterface.h
Source/Render/Vulkan/: VulkanCore.h
Source/Resource/Config/: Config.cpp  Config.h
Source/Runtime/: CMakeLists.txt  main.cpp
Source/ShaderCompiler/: CMakeLists.txt
Source/ShaderCompiler/SPVCompiler/: CComPtr.h  SPVCompiler.cpp  SPVCompiler.h
Source/Shaders/: CMakeLists.txt  DeferredLighting.frag  DeferredLighting.frag.spv  DeferredLighting.vert  DeferredLighting.vert.spv  DeferredLightingPBR.hlsl  GBuffer.frag  GBuffer.frag.spv  GBuffer.hlsl  GBuffer.vert  GBuffer.vert.spv
(+105 files in other folders)
